# set-neat

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: bench_neat.rs
examples/: BipedalWalker-v3.toml  CartPole-v1.toml  MountainCarContinuous-v0.toml  Pendulum-v0.toml  XOR.toml  cartpole_v1.toml  mountain_car_continuous_v0.toml  mountaincar_v0.toml  pendulum_v0.toml  run_bipedal_walker_v3.rs  run_cart_pole_v1.rs  run_cartpole_v1.rs  run_mountain_car_continuous_v0.rs  train_bipedal_walker_v3.rs  train_cart_pole_v1.rs  train_cartpole_v1.rs  train_mountain_car_continuous_v0.rs  train_mountaincar_v0.rs  train_pendulum_v0.rs  winner_BipedalWalker-v3_copy.json  winner_CartPole-v1.json  winner_MountainCarContinuous-v0.json  winner_Pendulum-v0.json  winner_cartpole_v1.json  winner_mountain_car_continuous_v0.json  xor.rs  xor.toml
examples/Acrobot-v1/: config.toml  index.html  log.yaml  main.rs
examples/AntBulletEnv-v0/: config.toml  log.yaml  main.rs
examples/BipedalWalker-v3/: 1601573090_parameters.json  config.toml  config.yaml  index.html  log.yaml  main.rs  run.rs  winner_1595505721.json  winner_1595516013.json  winner_1595516013_parameters.json  winner_1596358301.json  winner_1596358301_parameters.json  winner_SystemTime { tv_sec: 1595179237, tv_nsec: 209278355 }.json  winner_SystemTime { tv_sec: 1595190247, tv_nsec: 539590316 }.json  winner_SystemTime { tv_sec: 1595500918, tv_nsec: 578604981 }.json  winner_parameters__1595505721.json  winner_parameters__SystemTime { tv_sec: 1595179237, tv_nsec: 209505063 }.json  winner_parameters__SystemTime { tv_sec: 1595190247, tv_nsec: 539814960 }.json  winner_parameters__SystemTime { tv_sec: 1595500918, tv_nsec: 578771525 }.json
examples/CarRacing-v0/: config.toml  log.yaml  main.rs
examples/CartPole-v1/: config.toml  log.yaml  main.rs
examples/LunarLander-v2/: 1601592694_winner.json  1601592694_winner_parameters.json  config.toml  log.yaml  main.rs
examples/LunarLanderContinuous-v2/: 1602334299_winner.json  1602334299_winner_parameters.json  1602337001_winner.json  1602337001_winner_parameters.json  1602337001_winner_standard_scaler.json  1602340201_winner.json  1602340201_winner_parameters.json  config.toml  (+35 more)
src/: Config.toml  Config_XOR.toml  context.rs  example_XOR.rs  favannat_impl.rs  genome.rs  genomee.rs  lib.rs  parameters.rs  population.rs  rng.rs  runtime.rs  scores.rs  species.rs  statistics.rs  utility.rs
(+69 files in other folders)
