[package]
name = "set-neat"
version = "0.1.0"
authors = ["Silvan Buedenbender <silvancodes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = { version = "0.8", features = [ "small_rng" ] }
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.9"
rayon = "1.3"
ndarray = { version = "0.15.0", features = ["serde"] }
set_genome = { version = "0.6.0" }

[dev-dependencies]
favannat = { version = "0.6.0", features = ["ndarray"]}
nalgebra = "0.28.0"
gym = { git = "https://github.com/SilvanCodes/gym-rs", sha = "197d3db33a9fee8efa552bff7b061cbd68588766" }
log = "0.4.11"
log4rs = "0.13.0"
